--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.1
+Date: 2023-12-11
+  Features:
+    - UPS+ entities are now deconstructable, blueprintable, and selectable in all the ways you would expect
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2023-12-07
   Features:
