added dependencies to avoid race conditions

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.2
+Date: 2024-01-13
+  Fixes:
+    - Added dependencies to ensure all containers exist in data before making UPS+ versions
+---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 2023-12-11
   Features:
