gave planner unique name

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.4
+Date: 2024-05-11
+  Fixes:
+    - Fixed issue when used alongside Ore Patch Organizer.
+---------------------------------------------------------------------------------------------------
 Version: 1.0.3
 Date: 2024-01-25
   Features:
