--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.5
+Date: 2024-10-28
+  Features:
+    - Enable for 2.0 and Space Age
+---------------------------------------------------------------------------------------------------
 Version: 1.0.4
 Date: 2024-05-11
   Fixes:
