--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.6
+Date: 2025-02-25
+  Fixes:
+    - Buffer and requester chests now work again (2.0 changed logistic request functions)
+---------------------------------------------------------------------------------------------------
 Version: 1.0.5
 Date: 2024-10-28
   Features:
